# chess

./: .gitignore  COMMANDS.md  consolidate.py  prepare_llm_data.py  pyproject.toml  train_chess_llm_colab.ipynb  train_chess_model_colab.ipynb  train_large_models_colab.ipynb  train_llm_local.py  young_scientist_tasks.txt
scraper/: __init__.py  main.py
scraper/config/: credentials.yaml  default.yaml
scraper/scrapers/: __init__.py  base.py  chess_positions.py  experiments.py  images.py  numeric_relations.py  social.py
scraper/utils/: __init__.py  async_tools.py  config.py  directory.py  downloader.py  hashing.py  logger.py  rate_limiter.py  validator.py
scripts/: consolidate_data.py  download_lichess_db.py  download_lichess_evals.py  extract_positions.py  score_positions.py  score_positions_colab.ipynb  score_positions_colab_v2.ipynb  scrape_positions.py  test_training.py  train_eval_model.py
specs/: Spec-1.1.md  Spec-1.md  project-plan-1.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_scrapers.py
tests/mocks/: __init__.py  responses.py
tests/unit/: __init__.py  test_config.py  test_directory.py  test_hashing.py  test_rate_limiter.py  test_validator.py
